--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 
 services:
   backend:
+    image: swarm_backend
     build: ./backend/
     ports:
       - 8080:8080
@@ -22,6 +23,7 @@ services:
         constraints:
           - node.role == manager
   frontend1:
+    image: swarm_frontend1
     build: ./frontend/
     restart: always
     ports:
@@ -29,6 +31,7 @@ services:
     deploy:
       replicas: 3
   frontend2:
+    image: swarm_frontend2
     build: ./frontend2/
     restart: always
     ports:
