--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   backend:
-    image: swarm_backend
+    image: renaudperrai/iut:backend
     build: ./backend/
     ports:
       - 8080:8080
@@ -23,7 +23,7 @@ services:
         constraints:
           - node.role == manager
   frontend1:
-    image: swarm_frontend1
+    image: renaudperrai/iut:frontend1
     build: ./frontend/
     restart: always
     ports:
@@ -31,7 +31,7 @@ services:
     deploy:
       replicas: 3
   frontend2:
-    image: swarm_frontend2
+    image: renaudperrai/iut:frontend2
     build: ./frontend2/
     restart: always
     ports:
